# Python-Chess

./: .gitignore  README.md  main.py  pyproject.toml  python-chess-stockfish.patch  requirements.lock.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
chess_game/: __main__.py  adapter.py  analysis.py  anim.py  app.py  assets.py  bot_worker.py  clock.py  game.py  input_handler.py  io.py  layout.py  log.py  match_io.py  review.py  sound.py  state.py  stockfish_bot_worker.py  stockfish_download.py  theme.py  widgets.py
chess_game/engine/: bot.py  match.py  piece_tables.py  uci_utils.py
chess_game/render/: arrows.py  board.py  clocks.py  history.py  menus.py  overlays.py  trays.py
data/classes/: ChessAdapter.py
data/engine/: bot.py
docs/: faq.html  features.html  how-to-play.html  index.html  installation.html  saves-and-export.html  settings.html  troubleshooting.html
docs/assets/: footer.js  style.css  theme.js
tests/: conftest.py  test_analysis.py  test_app.py  test_bot_worker.py  test_clock.py  test_drag.py  test_engine.py  test_engine_match_mode.py  test_engine_uci_utils.py  test_game.py  test_io.py  test_layout.py  test_match.py  test_match_io.py  test_pvp_autoflip.py  test_render_clocks.py  test_render_smoke.py  test_render_trays.py  test_review.py  test_sound.py  test_state.py  test_stockfish_bot_worker.py  test_stockfish_download.py  test_trays.py  test_widgets.py
