[project]
name = "python-chess"
version = "2.3.0"
description = "A pygame desktop chess game"
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5,<3",
    "chess>=1.10,<2",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "pyinstaller>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["chess_game", "chess_game.render", "chess_game.engine"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["^tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=chess_game --cov-report=term-missing"
